# RPG_ERO

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/data/: ancestries.json  backgrounds.json  classes.json  manifest.json
backend/tests/: test_health.py  test_pf2ru_build.py  test_pf2ru_detail.py  test_pf2ru_detail_fetch.py  test_pf2ru_enrich.py  test_pf2ru_fixtures.py  test_pf2ru_links.py  test_pf2ru_mappings.py  test_pf2ru_normalize.py  test_pf2ru_table.py
backend/tests/fixtures/pf2ru/: ancestry_dwarf.html  background_acolyte.html  class_fighter.html  index_ancestries.html  index_backgrounds.html  index_classes.html
backend/tools/: pf2ru_recon.py
backend/tools/pf2ru/: build.py  detail.py  detail_fetch.py  enrich.py  links.py  mappings.py  normalize.py  table.py
docs/superpowers/plans/: 2026-06-28-veha1-foundation-data-recon.md  2026-06-29-veha1-data-pipeline.md  2026-06-29-veha1-detail-extraction.md  2026-06-29-veha1-remaster-only.md
docs/superpowers/specs/: 2026-06-25-rpg-ero-design.md  2026-06-28-pf2ru-data-findings.md  2026-06-30-chargen-engine-design.md
